@@ -1849,6 +1849,9 @@ ECL 0.9d
 
   - A VALUES form can now act as a place.
 
+  - All non-graphic characters below (CODE-CHAR 128) have now
+    character names.
+
 TODO:
 =====
 
